--- a/www/styles.css
+++ b/www/styles.css
@@ -12,3 +12,20 @@ body {
 }
 
 /* Boxen */
+.dropdown-menu {
+    background-color: black;
+    border-radius:0px;
+}
+
+/* selectInput */
+.selectize-input {
+  border-radius:0px;
+}
+
+.selectize-input.dropdown-active {
+  border-radius:0px;
+}
+
+.selectize-dropdown {
+  border-radius:0px;
+}
